Adding a bunch of activities to begin to match the UI pattern developed by the team. This should give context to work already being done.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">StudyTables</string>
     <string name="login">Login</string>
     <string name="title_activity_class_details">ClassDetailsActivity</string>
+    <string name="title_activity_class_events">ClassEventsActivity</string>
 </resources>
